# InHollandPrinter

./: .gitignore  getFailure.py  handlePrinter.py  printer_info.csv  pyproject.toml  readme.md  requirements.txt
src/inhollandPrinter/: imageStore.py  main.py  mlClient.py  monitor.py  printerClient.py  settings.py
src/inholland_printer/: image_store.py  main.py  ml_client.py  monitor.py  printer_client.py  settings.py
src/inholland_printer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
