[project]
name = "inholland-printer"
version = "0.1.0"
description = "Printer fleet monitoring and spaghetti detection for InHolland's 3D printers"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "structlog",
    "pydantic-settings",
    "requests",
    "opencv-python",
    "prusa-connect-sdk-client",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
